--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ tr.checked td {
       <th>身長タイプ</th>
     </tr>
   </thead>
-  <tbody id="character-table"></tbody>
+  <tbody id="character-grid"></tbody>
 </table>
 
 <script>
